==> ohilab/libohiboard/source/STM32L0/uart_STM32L0.c <==
#include "uart.h"
#include "interrupt.h"
#include "clock.h"
#include "utility.h"
#include "gpio.h"
#include "system.h"
#define UART_DEVICE_IS_ENABLED(REGMAP)    (REGMAP->CR1 & USART_CR1_UE)
#define UART_DEVICE_ENABLE(REGMAP)        (REGMAP->CR1 |= USART_CR1_UE)
#define UART_DEVICE_DISABLE(REGMAP)       (REGMAP->CR1 &= ~USART_CR1_UE)
#define UART_MAX_PINS                     8
#define UART_LP_BRR_MIN                   0x00000300U
#define UART_LP_BRR_MAX                   0x000FFFFFU
#define UART_BRR_MIN                      0x10U
#define UART_BRR_MAX                      0x0000FFFFU
#define UART_CLOCK_ENABLE(REG,MASK)       do { \
                                            UTILITY_SET_REGISTER_BIT(REG,MASK); \
                                            asm("nop"); \
                                            (void) UTILITY_READ_REGISTER_BIT(REG,MASK); \
                                          } while (0)
#define UART_CLOCK_DISABLE(REG,MASK)      do { \
		                                    UTILITY_CLEAR_REGISTER_BIT(REG,MASK); \
                                            asm("nop"); \
                                            (void) UTILITY_READ_REGISTER_BIT(REG,MASK); \
                                          } while (0)

static System_Errors Uart_config (Uart_DeviceHandle dev, Uart_Config * config)
{
    System_Errors err = ERRORS_NO_ERROR;
    // Check all parameters with asserts
    // The OR is to detect an error: it is not important where is, the important is that there is!
    err = ohiassert(UART_VALID_DATABITS(config->dataBits));
    err |= ohiassert(UART_VALID_BAUDRATE(config->baudrate));
    err |= ohiassert(UART_VALID_OVERSAMPLING(config->oversampling));
    if (UART_IS_LOWPOWER_DEVICE(dev))
    {
        err |= ohiassert(UART_VALID_STOPBITS_LP(config->stop));
    }
    else
    {
        err |= ohiassert(UART_VALID_STOPBITS(config->stop));
    }
    err |= ohiassert(UART_VALID_PARITY(config->parity));
    err |= ohiassert(UART_VALID_FLOWCONTROL(config->flowControl));
    err |= ohiassert(UART_VALID_MODE(config->mode));

    if (err != ERRORS_NO_ERROR)
        return ERRORS_UART_WRONG_PARAM;

    // Save configurations
    dev->config = *config;

    // Disable the peripheral
    UART_DEVICE_DISABLE(dev->regmap);

    // Config peripheral
    // Configure data bits with the M bits
    dev->regmap->CR1 = dev->regmap->CR1 & (~(USART_CR1_M));
    switch (dev->config.dataBits)
    {
    case UART_DATABITS_SEVEN:
        dev->regmap->CR1 |= USART_CR1_M1;
        break;
    case UART_DATABITS_EIGHT:
        dev->regmap->CR1 |= 0x00U;
        break;
    case UART_DATABITS_NINE:
        dev->regmap->CR1 |= USART_CR1_M0;
        break;
    }

    // Configure parity type with PCE and PS bit
    dev->regmap->CR1 = dev->regmap->CR1 & (~(USART_CR1_PCE | USART_CR1_PS));
    switch (dev->config.parity)
    {
    case UART_PARITY_NONE:
        dev->regmap->CR1 |= 0x00U;
        break;
    case UART_PARITY_ODD:
        dev->regmap->CR1 |= USART_CR1_PCE | USART_CR1_PS;
        break;
    case UART_PARITY_EVEN:
        dev->regmap->CR1 |= USART_CR1_PCE;
        break;
    }

    // Configure peripheral mode with TE and RE bits into CR1
    dev->regmap->CR1 = dev->regmap->CR1 & (~(USART_CR1_TE | USART_CR1_RE));
    switch (dev->config.mode)
    {
    case UART_MODE_TRANSMIT:
        dev->regmap->CR1 |= USART_CR1_TE;
        break;
    case UART_MODE_RECEIVE:
        dev->regmap->CR1 |= USART_CR1_RE;
        break;
    case UART_MODE_BOTH:
        dev->regmap->CR1 |= USART_CR1_TE | USART_CR1_RE;
        break;
    }

    // Set oversampling: if value differ from 8, use default value.
    dev->regmap->CR1 = dev->regmap->CR1 & (~(USART_CR1_OVER8));
    if (dev->config.oversampling == 8)
    {
        dev->regmap->CR1 |= USART_CR1_OVER8;
    }

    // Configure stop bits with STOP[13:12] bits into CR2
    dev->regmap->CR2 = dev->regmap->CR2 & (~(USART_CR2_STOP));
    switch (dev->config.stop)
    {
    case UART_STOPBITS_HALF:
        dev->regmap->CR2 |= (USART_CR2_STOP & (0x01ul << USART_CR2_STOP_Pos));
        break;
    case UART_STOPBITS_ONE:
        dev->regmap->CR2 |= (USART_CR2_STOP & (0x00ul << USART_CR2_STOP_Pos));
        break;
    case UART_STOPBITS_ONE_AND_HALF:
        dev->regmap->CR2 |= (USART_CR2_STOP & (0x03ul << USART_CR2_STOP_Pos));
        break;
    case UART_STOPBITS_TWO:
        dev->regmap->CR2 |= (USART_CR2_STOP & (0x02ul << USART_CR2_STOP_Pos));
        break;
    }

    // Configure hardware flow control with CTS and RTS bits into CR3
    dev->regmap->CR3 = dev->regmap->CR3 & (~(USART_CR3_CTSE | USART_CR3_RTSE));
    switch (dev->config.flowControl)
    {
    case UART_FLOWCONTROL_NONE:
        dev->regmap->CR3 |= 0x0U;
        break;
    case UART_FLOWCONTROL_CTS:
        dev->regmap->CR3 |= USART_CR3_CTSE;
        break;
    case UART_FLOWCONTROL_RTS:
        dev->regmap->CR3 |= USART_CR3_RTSE;
        break;
    case UART_FLOWCONTROL_CTS_RTS:
        dev->regmap->CR3 |= USART_CR3_CTSE | USART_CR3_RTSE;
        break;
    }

    // Compute RX mask
    Uart_computeRxMask(dev);

    // TODO: ONEBIT One sample bit method enable

    // Configure Baudrate
    err = Uart_setBaudrate(dev,dev->config.baudrate);
    if (err != ERRORS_NO_ERROR)
        return ERRORS_UART_WRONG_PARAM;

    // In asynchronous mode, the following bits must be kept cleared:
    // LINEN and CLKEN bits into CR2
    // SCEN, HDSEL and IREN  bits into CR3
    // TODO: in other configuration, these bit must be change!
    UTILITY_CLEAR_REGISTER_BIT(dev->regmap->CR2, (USART_CR2_LINEN | USART_CR2_CLKEN));
    UTILITY_CLEAR_REGISTER_BIT(dev->regmap->CR3, (USART_CR3_SCEN | USART_CR3_HDSEL | USART_CR3_IREN));

    // Enable the peripheral
    UART_DEVICE_ENABLE(dev->regmap);

    return ERRORS_NO_ERROR;
}

System_Errors Uart_setBaudrate (Uart_DeviceHandle dev, uint32_t baudrate)
{
    uint32_t frequency = 0;

    // TODO: This clock check into a define divided for microcontroller type?
    if (UART_IS_DUAL_CLOCK_DOMAIN(dev))
    {
        // Get current parent clock
        switch (dev->config.clockSource)
        {
        case UART_CLOCKSOURCE_HSI:
            frequency = (uint32_t)CLOCK_FREQ_HSI;
            break;
        case UART_CLOCKSOURCE_LSE:
            frequency = (uint32_t)CLOCK_FREQ_LSE;
            break;
        case UART_CLOCKSOURCE_SYSCLK:
            frequency = Clock_getOutputValue(CLOCK_OUTPUT_SYSCLK);
            break;
        case UART_CLOCKSOURCE_PCLK:
            if (dev == OB_UART1)
                frequency = Clock_getOutputValue(CLOCK_OUTPUT_PCLK2);
            else
                frequency = Clock_getOutputValue(CLOCK_OUTPUT_PCLK1);
            break;
        default:
            ohiassert(0);
            return ERRORS_UART_NO_CLOCKSOURCE;
        }
    }
    else
    {
        frequency = Clock_getOutputValue(CLOCK_OUTPUT_PCLK1);
    }

    // Current clock is different from 0
    if (frequency != 0u)
    {
        if (UART_IS_LOWPOWER_DEVICE(dev))
        {
            // Check the range of current clock
            // The range is [3 * baudrate, 4096 * baudrate]
            if (((frequency < ( 3u * baudrate))) && (frequency > ( 4096u * baudrate)))
            {
                return ERRORS_UART_WRONG_BAUDRATE;
            }
            else
            {
                uint32_t uartdiv = (uint32_t)(((uint64_t)frequency * 256u) / baudrate);
                if ((uartdiv >= UART_LP_BRR_MIN) && (uartdiv <= UART_LP_BRR_MAX))
                {
                    dev->regmap->BRR = uartdiv;
                }
                else
                {
                    return ERRORS_UART_WRONG_BAUDRATE;
                }

            }
        }
        else if (dev->config.oversampling == 8)
        {
            uint32_t uartdiv = (frequency * 2u) / baudrate;
            if ((uartdiv >= UART_BRR_MIN) && (uartdiv <= UART_BRR_MAX))
            {
                // Fix BRR value
                // see page 771 of RM0367 (Rev6)
                uint32_t brr = uartdiv & 0xFFF0u;
                brr |= (uint16_t)((uartdiv & (uint16_t)0x000Fu) >> 1u);
                brr &= 0xFFF7; // Clear BRR3
                dev->regmap->BRR = brr;
            }
            else
            {
                return ERRORS_UART_WRONG_BAUDRATE;
            }
        }
        else
        {
            uint32_t uartdiv = frequency / baudrate;
            if ((uartdiv >= UART_BRR_MIN) && (uartdiv <= UART_BRR_MAX))
            {
                dev->regmap->BRR = uartdiv;
            }
            else
            {
                return ERRORS_UART_WRONG_BAUDRATE;
            }
        }
    }
    else
    {
        return ERRORS_UART_CLOCKSOURCE_FREQUENCY_TOO_LOW;
    }

    return ERRORS_NO_ERROR;
}

System_Errors Uart_init (Uart_DeviceHandle dev, Uart_Config *config)
{
    System_Errors err = ERRORS_NO_ERROR;
    // Check the UART device
    if (dev == NULL)
    {
        return ERRORS_UART_NO_DEVICE;
    }
    // Check the UART instance
    err = ohiassert((UART_IS_DEVICE(dev)) || (UART_IS_LOWPOWER_DEVICE(dev)));
    if (err != ERRORS_NO_ERROR)
    {
        return ERRORS_UART_WRONG_DEVICE;
    }
    // Check clock source selections
    err = ohiassert(UART_IS_VALID_CLOCK_SOURCE(config->clockSource));
    if (err != ERRORS_NO_ERROR)
    {
        return ERRORS_UART_WRONG_PARAM;
    }

    // Enable peripheral clock if needed
    if (dev->state == UART_DEVICESTATE_RESET)
    {
        // Select clock source (Only for some peripheral)
        if (UART_IS_DUAL_CLOCK_DOMAIN(dev))
            UTILITY_MODIFY_REGISTER(*dev->rccTypeRegisterPtr,dev->rccTypeRegisterMask,(config->clockSource << dev->rccTypeRegisterPos));

        // Enable peripheral clock
        UART_CLOCK_ENABLE(*dev->rccRegisterPtr,dev->rccRegisterEnable);

        // Enable pins
        if (config->rxPin != UART_PINS_RXNONE)
            Uart_setRxPin(dev, config->rxPin);

        if (config->txPin != UART_PINS_TXNONE)
            Uart_setTxPin(dev, config->txPin);
    }
    dev->state = UART_DEVICESTATE_BUSY;

    // Configure the peripheral
    err = Uart_config(dev,config);
    if (err != ERRORS_NO_ERROR)
    {
        return err;
    }

    // Configure interrupt
    if (config->callbackRx)
    {
        dev->callbackRx = config->callbackRx;
        if (config->callbackError)
        {
            dev->callbackError = config->callbackError;
        }
        // Enable NVIC interrupt
        Interrupt_enable(dev->isrNumber);
        // Enable the UART Error Interrupt
        UTILITY_SET_REGISTER_BIT(dev->regmap->CR3, USART_CR3_EIE);
        // Enable UART Data Register Not Empty interrupt
        UTILITY_SET_REGISTER_BIT(dev->regmap->CR1, USART_CR1_RXNEIE);
        // FIXME: Enable UART Parity Error, only when parity was request!
    }

    if (config->callbackTx)
    {
        dev->callbackTx = config->callbackTx;
        if (config->callbackError)
        {
            dev->callbackError = config->callbackError;
        }
        // Enable NVIC interrupt
        Interrupt_enable(dev->isrNumber);
        UTILITY_SET_REGISTER_BIT(dev->regmap->CR1,USART_CR1_TXEIE);
    }

    if (dev->config.callbackObj != NULL)
    {
        dev->callbackObj = dev->config.callbackObj;
    }
    else
    {
        dev->callbackObj = NULL;
    }

    dev->state = UART_DEVICESTATE_READY;

    return ERRORS_NO_ERROR;
}

System_Errors Uart_deInit (Uart_DeviceHandle dev)
{
    System_Errors err = ERRORS_NO_ERROR;
    // Check the UART device
    if (dev == NULL)
    {
        return ERRORS_UART_NO_DEVICE;
    }
    // Check the UART instance
    err = ohiassert((UART_IS_DEVICE(dev)) || (UART_IS_LOWPOWER_DEVICE(dev)));
    if (err != ERRORS_NO_ERROR)
    {
        return ERRORS_UART_WRONG_DEVICE;
    }

    // The device is busy...
    dev->state = UART_DEVICESTATE_BUSY;
    // Disable the peripheral
    UART_DEVICE_DISABLE(dev->regmap);

    // Clear all registers
    dev->regmap->CR1 = 0x0u;
    dev->regmap->CR2 = 0x0u;
    dev->regmap->CR3 = 0x0u;

    // Delete interrrupt callback
    dev->callbackRx = NULL;
    dev->callbackTx = NULL;

    // Disable peripheral clock
    UART_CLOCK_DISABLE(*dev->rccRegisterPtr,dev->rccRegisterEnable);

    // Set reset state
    dev->state = UART_DEVICESTATE_RESET;

    return err;
}

System_Errors Uart_setRxPin (Uart_DeviceHandle dev, Uart_RxPins rxPin)
{
    uint8_t devPinIndex;

    for (devPinIndex = 0; devPinIndex < UART_MAX_PINS; ++devPinIndex)
    {
        if (dev->rxPins[devPinIndex] == rxPin)
        {
            Gpio_configAlternate(dev->rxPinsGpio[devPinIndex],
                                 dev->rxPinsMux[devPinIndex],
                                 0);
            return ERRORS_NO_ERROR;
        }
    }
    return ERRORS_UART_NO_PIN_FOUND;
}

System_Errors Uart_setTxPin (Uart_DeviceHandle dev, Uart_TxPins txPin)
{
    uint8_t devPinIndex;

    for (devPinIndex = 0; devPinIndex < UART_MAX_PINS; ++devPinIndex)
    {
        if (dev->txPins[devPinIndex] == txPin)
        {
            Gpio_configAlternate(dev->txPinsGpio[devPinIndex],
                                 dev->txPinsMux[devPinIndex],
                                 0);
            return ERRORS_NO_ERROR;
        }
    }
    return ERRORS_UART_NO_PIN_FOUND;
}

System_Errors Uart_read (Uart_DeviceHandle dev, uint8_t* data, uint32_t timeout)
{
    uint16_t* temp;

    uint32_t timeoutEnd = System_currentTick() + timeout;

    if (dev->state == UART_DEVICESTATE_READY)
    {
        dev->state = UART_DEVICESTATE_BUSY;
        while (UTILITY_READ_REGISTER_BIT(dev->regmap->ISR,USART_ISR_RXNE) == 0)
        {
            if (System_currentTick() > timeoutEnd)
            {
                return ERRORS_UART_TIMEOUT_RX;
            }
        }

        // In case of 9B and parity NONE, the message is split into two byte and aligned!
        if ((dev->config.dataBits == UART_DATABITS_NINE) &&
            (dev->config.parity == UART_PARITY_NONE))
        {
            // Cast the pointer
            temp = (uint16_t *) data;
            *temp = (uint16_t) (dev->regmap->RDR & dev->mask);
        }
        else
        {
            *data = (uint8_t)(dev->regmap->RDR & (uint8_t)dev->mask);
        }
    }
    else
    {
        return ERRORS_UART_DEVICE_BUSY;
    }
    dev->state = UART_DEVICESTATE_READY;
    return ERRORS_NO_ERROR;
}

System_Errors Uart_write (Uart_DeviceHandle dev, const uint8_t* data, uint32_t timeout)
{
    uint16_t* temp = 0;

    uint32_t timeoutEnd = System_currentTick() + timeout;

    if (dev->state == UART_DEVICESTATE_READY)
    {
        // Wait until the buffer is empty
        while (UTILITY_READ_REGISTER_BIT(dev->regmap->ISR,USART_ISR_TXE) == 0)
        {
            if (System_currentTick() > timeoutEnd)
            {
                return ERRORS_UART_TIMEOUT_TX;
            }
        }

        // In case of 9B and parity NONE, the message is split into two byte
        if ((dev->config.dataBits == UART_DATABITS_NINE) &&
            (dev->config.parity == UART_PARITY_NONE))
        {
            // Cast the pointer
            temp = (uint16_t *) data;
            dev->regmap->TDR = (*temp & 0x01FFu);
        }
        else
        {
            dev->regmap->TDR = (*data & 0x00FFu);
        }
        // Start-up new timeout
        timeoutEnd = System_currentTick() + timeout;
        // Wait until the transmission is complete
        while (UTILITY_READ_REGISTER_BIT(dev->regmap->ISR,USART_ISR_TC) == 0)
        {
            if (System_currentTick() > timeoutEnd)
            {
                return ERRORS_UART_TIMEOUT_TX;
            }
        }
    }
    else
    {
        return ERRORS_UART_DEVICE_BUSY;
    }
    dev->state = UART_DEVICESTATE_READY;
    return ERRORS_NO_ERROR;
}

bool Uart_isPresent (Uart_DeviceHandle dev)
{
    return (UTILITY_READ_REGISTER_BIT(dev->regmap->ISR,USART_ISR_RXNE) == 0) ? FALSE : TRUE;
}
