==> ohilab/libohiboard/source/PIC24FJ/uart_PIC24FJ.c <==
#include "platforms.h"
#include "uart.h"
#include "platforms.h"
#include "utility.h"
#include "gpio.h"
#include "clock.h"
#include "interrupt.h"
#define UART_DEVICE_ENABLE(REGMAP)        (UTILITY_SET_REGISTER_BIT(REGMAP->UMODE,_U1MODE_UARTEN_MASK))
#define UART_DEVICE_DISABLE(REGMAP)       (UTILITY_CLEAR_REGISTER_BIT(REGMAP->UMODE,_U1MODE_UARTEN_MASK))
#define UART_VALID_STOPBITS(STOPBITS) (((STOPBITS) == UART_STOPBITS_ONE)          || \
                                       ((STOPBITS) == UART_STOPBITS_TWO))
#define UART_VALID_PARITY(PARITY) (((PARITY) == UART_PARITY_NONE) || \
                                   ((PARITY) == UART_PARITY_EVEN) || \
                                   ((PARITY) == UART_PARITY_ODD))
#define UART_VALID_DATABITS(DATABITS) (((DATABITS) == UART_DATABITS_EIGHT) || \
                                       ((DATABITS) == UART_DATABITS_NINE))
#define UART_VALID_FLOWCONTROL(FLOWCONTROL) (((FLOWCONTROL) == UART_FLOWCONTROL_NONE) || \
                                             ((FLOWCONTROL) == UART_FLOWCONTROL_RTS)  || \
                                             ((FLOWCONTROL) == UART_FLOWCONTROL_CTS_RTS))
#define UART_VALID_MODE(MODE) (((MODE) == UART_MODE_TRANSMIT) || \
                               ((MODE) == UART_MODE_RECEIVE)  || \
                               ((MODE) == UART_MODE_BOTH))

static System_Errors Uart_config (Uart_DeviceHandle dev)
{
    System_Errors err = ERRORS_NO_ERROR;

    // Disable the peripheral
    UART_DEVICE_DISABLE(dev->regmap);

    // Clear all registers
    dev->regmap->UMODE = 0;
    dev->regmap->UBRG  = 0;
    dev->regmap->USTA  = 0;

    // Config peripheral
    // Configure data bits and parity control
    dev->regmap->UMODE = dev->regmap->UMODE & (~(_U1MODE_PDSEL_MASK));
    switch (dev->config.dataBits)
    {
    case UART_DATABITS_EIGHT:
        if (dev->config.parity == UART_PARITY_EVEN)
        {
            dev->regmap->UMODE |= _U1MODE_PDSEL0_MASK;
        }
        else if (dev->config.parity == UART_PARITY_ODD)
        {
            dev->regmap->UMODE |= _U1MODE_PDSEL1_MASK;
        }
        else
        {
            dev->regmap->UMODE |= 0x0000u;
        }
        break;
    case UART_DATABITS_NINE:
        dev->regmap->UMODE |= _U1MODE_PDSEL_MASK;
        break;
    }

    // Configure stop bits
    dev->regmap->UMODE = dev->regmap->UMODE & (~(_U1MODE_STSEL_MASK));
    switch (dev->config.stop)
    {
    case UART_STOPBITS_ONE:
        dev->regmap->UMODE |= 0x0000u;
        break;
    case UART_STOPBITS_TWO:
        dev->regmap->UMODE |= _U1MODE_STSEL_MASK;
        break;
    }

    // Configure hardware flow control
    dev->regmap->UMODE = dev->regmap->UMODE & (~(_U1MODE_UEN_MASK));
    switch (dev->config.flowControl)
    {
    case UART_FLOWCONTROL_NONE:
        dev->regmap->UMODE |= 0x0000u;
        break;
    case UART_FLOWCONTROL_RTS:
        dev->regmap->UMODE |= _U1MODE_UEN0_MASK;
        break;
    case UART_FLOWCONTROL_CTS_RTS:
        dev->regmap->UMODE |= _U1MODE_UEN1_MASK;
        break;
    }

    // Configure behaviour during sleep and idle mode
    dev->regmap->UMODE = dev->regmap->UMODE & (~(_U1MODE_WAKE_MASK | _U1MODE_USIDL_MASK));
    dev->regmap->UMODE |= dev->config.sleepMode;
    dev->regmap->UMODE |= dev->config.idleMode;

    // Configure Baudrate
    err = Uart_setBaudrate(dev,dev->config.baudrate);
    if (err != ERRORS_NO_ERROR)
        return ERRORS_UART_WRONG_PARAM;

    // Check callback and save it
    if (dev->config.callbackRx != 0)
    {
        dev->callbackRx = dev->config.callbackRx;
        Interrupt_setPriority(dev->isrNumberRx,dev->config.isrRxPriority);
        Interrupt_clearFlag(dev->isrNumberRx);
        Interrupt_enable(dev->isrNumberRx);

        Interrupt_clearFlag(dev->isrNumberErr);
        Interrupt_enable(dev->isrNumberErr);
        dev->callbackErr = dev->config.callbackError;
    }
    if (dev->config.callbackTx != 0)
    {
        dev->callbackTx = dev->config.callbackTx;
        Interrupt_setPriority(dev->isrNumberTx,dev->config.isrTxPriority);
        Interrupt_clearFlag(dev->isrNumberTx);
        Interrupt_enable(dev->isrNumberTx);
    }
    if (dev->config.callbackObj != NULL)
    {
        dev->callbackObj = dev->config.callbackObj;
    }
    else
    {
        dev->callbackObj = NULL;
    }

    UART_DEVICE_ENABLE(dev->regmap);

    // Configure peripheral mode
    dev->regmap->USTA = dev->regmap->USTA & (~(_U1STA_URXEN_MASK | _U1STA_UTXEN_MASK));
    switch (dev->config.mode)
    {
    case UART_MODE_TRANSMIT:
        dev->regmap->USTA |= _U1STA_UTXEN_MASK;
        break;
    case UART_MODE_RECEIVE:
        dev->regmap->USTA |= _U1STA_URXEN_MASK;
        break;
    case UART_MODE_BOTH:
        dev->regmap->USTA |= _U1STA_URXEN_MASK | _U1STA_UTXEN_MASK;
        break;
    }

    return err;
}

System_Errors Uart_init (Uart_DeviceHandle dev, Uart_Config *config)
{
    System_Errors err = ERRORS_NO_ERROR;
    // Check the UART device
    if (dev == NULL)
    {
        return ERRORS_UART_NO_DEVICE;
    }
    // Check the UART instance
    if (ohiassert(UART_IS_DEVICE(dev)) != ERRORS_NO_ERROR)
    {
        return ERRORS_UART_WRONG_DEVICE;
    }

    err = ohiassert(UART_VALID_DATABITS(config->dataBits));
    err |= ohiassert(UART_VALID_BAUDRATE(config->baudrate));
    err |= ohiassert(UART_VALID_STOPBITS(config->stop));
    err |= ohiassert(UART_VALID_PARITY(config->parity));
    err |= ohiassert(UART_VALID_FLOWCONTROL(config->flowControl));
    err |= ohiassert(UART_VALID_SLEEPMODE(config->sleepMode));
    err |= ohiassert(UART_VALID_IDLEMODE(config->idleMode));
    if (config->callbackRx != 0)
    {
        err |= ohiassert(INTERRUPT_IS_VALID_PRIORITY(config->isrRxPriority));
    }
    if (config->callbackTx != 0)
    {
        err |= ohiassert(INTERRUPT_IS_VALID_PRIORITY(config->isrTxPriority));
    }
    if (err != ERRORS_NO_ERROR)
    {
        return ERRORS_UART_WRONG_PARAM;
    }
    // Save configuration
    dev->config = *config;

    // Enable peripheral clock if needed
    if (dev->state == UART_DEVICESTATE_RESET)
    {
        // Enable peripheral
        UTILITY_CLEAR_REGISTER_BIT(*dev->pmdRegisterPtr, dev->pmdRegisterEnable);

        // Whether the device have remappable pins, configure it!
        if (UART_IS_PIN_REMAPPABLE(dev))
        {
            // Enable pins
            if (config->rxPin != UART_PINS_RXNONE)
            {
                Uart_setRxPin(dev, config->rxPin);
            }

            if (config->txPin != UART_PINS_TXNONE)
            {
                Uart_setTxPin(dev, config->txPin);
            }
        }
    }
    dev->state = UART_DEVICESTATE_BUSY;

    // Configure the peripheral
    err = Uart_config(dev);
    if (err != ERRORS_NO_ERROR)
    {
        // FIXME: Call deInit?
        dev->state = UART_DEVICESTATE_ERROR;
        return err;
    }

    dev->state = UART_DEVICESTATE_READY;
    return err;
}

System_Errors Uart_deInit (Uart_DeviceHandle dev)
{
    System_Errors error = ERRORS_NO_ERROR;

    Uart_flushRx(dev);

    // Disable the peripheral
    UART_DEVICE_DISABLE(dev->regmap);

    // Clear all registers
    dev->regmap->UMODE = 0;
    dev->regmap->UBRG  = 0;
    dev->regmap->USTA  = 0;

    // Check callback and delete it
    if (dev->callbackRx != 0)
    {
        dev->callbackRx = 0;
        Interrupt_clearFlag(dev->isrNumberRx);
        Interrupt_disable(dev->isrNumberRx);

        dev->callbackErr = 0;
        Interrupt_clearFlag(dev->isrNumberErr);
        Interrupt_disable(dev->isrNumberErr);
    }
    if (dev->callbackTx != 0)
    {
        dev->callbackTx = 0;
        Interrupt_clearFlag(dev->isrNumberTx);
        Interrupt_disable(dev->isrNumberTx);
    }
    dev->callbackObj = NULL;

    return error;
}

System_Errors Uart_setRxPin (Uart_DeviceHandle dev, Uart_RxPins rxPin)
{
    // unlock PPS
    __builtin_write_OSCCONL(OSCCON & 0xbf);

    UTILITY_MODIFY_REGISTER(*dev->ppsRxRegisterPtr, dev->ppsRxRegisterMask, (rxPin << dev->ppsRxRegisterPosition));

    // lock   PPS
    __builtin_write_OSCCONL(OSCCON | 0x40);

    return ERRORS_NO_ERROR;
}

System_Errors Uart_setTxPin (Uart_DeviceHandle dev, Uart_TxPins txPin)
{
    uint8_t regIndex = txPin / 2;
    uint8_t regPosIndex = ((txPin % 2 ) * 8);

    // unlock PPS
    __builtin_write_OSCCONL(OSCCON & 0xbf);

    UTILITY_MODIFY_REGISTER(PPS->RPOR[regIndex], (0x3F << regPosIndex),(dev->ppsTxRegisterValue << regPosIndex));

    // lock   PPS
    __builtin_write_OSCCONL(OSCCON | 0x40);

    return ERRORS_NO_ERROR;
}

System_Errors Uart_setBaudrate (Uart_DeviceHandle dev, uint32_t baudrate)
{
    uint32_t frequency = Clock_getOutputValue(CLOCK_OUTPUT_PERIPHERAL);
    uint16_t brg = 0;

    if (frequency != 0)
    {
        if (baudrate <= (frequency / 16))
        {
            uint16_t brgLow  = (uint16_t) ((float)(((frequency / (16 * baudrate)) + 0.5f) - 1));
            uint16_t brgHigh = (uint16_t) ((float)(((frequency / (4  * baudrate)) + 0.5f) - 1));

            // Compute baudrate
            uint32_t baudrateComputeLow  = frequency / (16 * (brgLow  + 1));
            uint32_t baudrateComputeHigh = frequency / (4 * (brgHigh + 1));

            uint32_t diffLow  = 0xFFFFFFFFul;
            uint32_t diffHigh = 0xFFFFFFFFul;

            if (baudrateComputeLow > baudrate) diffLow = baudrateComputeLow - baudrate;
            else                               diffLow = baudrate - baudrateComputeLow;

            if (baudrateComputeHigh > baudrate) diffHigh = baudrateComputeHigh - baudrate;
            else                                diffHigh = baudrate - baudrateComputeHigh;

            if (diffLow < diffHigh)
            {
                brg = brgLow;
                dev->regmap->UMODE &= ~(_U1MODE_BRGH_MASK);
            }
            else
            {
                brg = brgHigh;
                dev->regmap->UMODE |= (_U1MODE_BRGH_MASK);
            }
        }
        else
        {
            brg = (uint16_t) ((float)(((frequency / (4 * baudrate)) + 0.5f) - 1));
            dev->regmap->UMODE |= _U1MODE_BRGH_MASK;
        }
    }
    else
    {
        return ERRORS_UART_NO_CLOCKSOURCE;
    }

    dev->regmap->UBRG = brg;

    return ERRORS_NO_ERROR;
}

System_Errors Uart_read (Uart_DeviceHandle dev, uint8_t *data, uint32_t timeout)
{
    uint32_t timeoutEnd = System_currentTick() + timeout;

    // Wait until the buffer is empty
    while (UTILITY_READ_REGISTER_BIT(dev->regmap->USTA,_U1STA_URXDA_MASK) == 0)
    {
        if (System_currentTick() > timeoutEnd)
        {
            return ERRORS_UART_TIMEOUT_RX;
        }
    }

    // In case of 9B
    if (dev->config.dataBits == UART_DATABITS_NINE)
    {
        // Cast the pointer
        uint16_t* temp = (uint16_t *) data;
        *temp = (uint16_t) (dev->regmap->URXREG);
    }
    else
    {
        *data = (uint8_t) (dev->regmap->URXREG & 0x00FF);
    }

    return ERRORS_NO_ERROR;
}

System_Errors Uart_write (Uart_DeviceHandle dev, const uint8_t* data, uint32_t timeout)
{
    System_Errors error = ERRORS_NO_ERROR;

    uint32_t timeoutEnd = System_currentTick() + timeout;

    // Wait until the buffer is empty
    while (UTILITY_READ_REGISTER_BIT(dev->regmap->USTA,_U1STA_UTXBF_MASK) > 0)
    {
        if (System_currentTick() > timeoutEnd)
        {
            return ERRORS_UART_TIMEOUT_TX;
        }
    }

    if (dev->config.dataBits == UART_DATABITS_NINE)
    {
        uint16_t* temp = (uint16_t *) data;
        dev->regmap->UTXREG = (*temp & 0x01FFu);
    }
    else
    {
        dev->regmap->UTXREG = (*data & 0x00FFu);
    }

    return error;
}

bool Uart_isPresent (Uart_DeviceHandle dev)
{
    return (UTILITY_READ_REGISTER_BIT(dev->regmap->USTA,_U1STA_URXDA_MASK) == 0) ? FALSE : TRUE;
}
